styles/pages/main-menu/main-menu.scss
@use '../../config' as *;
@use '../../abstract/function';
@use '../../abstract/mixin';

$pane-move-time: 0.1s;

.ControllerOnly {
	visibility: collapse;
}

.InputController .ControllerOnly {
	visibility: visible;
}

.KeyboardOnly {
	visibility: collapse;
}

.InputKeyboard .KeyboardOnly {
	visibility: visible;
}

#TooltipManager,
#ContextMenuManager,
#PopupManager,
.MainMenuRootPanel {
	width: 100%;
	height: 100%;
}

.MainMenuModeOnly {
	visibility: visible;
}

.PauseMenuMode .MainMenuModeOnly {
	visibility: collapse;
}

.PauseMenuModeOnly {
	visibility: collapse;
}

.PauseMenuMode .PauseMenuModeOnly {
	visibility: visible;
}

.CampaignSelectedOnly {
	visibility: collapse;
}

.CampaignSelected .CampaignSelectedOnly {
	visibility: visible;
}

.CampaignSelected .NoCampaignSelectedOnly {
	visibility: collapse;
}

.PauseMenuMode .MainMenuModeOnly.CampaignSelectedOnly {
	visibility: collapse;
}

.loading-indicator {
	horizontal-align: right;
	vertical-align: bottom;
	padding: 12px 14px;
	margin: 15px;
	margin-right: 16px;
	background-color: black;
	border-radius: 6px;
	& > Label {
		font-family: Verdana;
		font-size: 16px;
		color: white;
	}
}

.mainmenu {
	width: 100%;
	height: 100%;

	&__background {
		width: 100%;
		height: 100%;
	}

	&__movie {
		width: 1920px;
		height: 1080px;
	}

	&__pause-blur {
		width: 100%;
		height: 100%;
		saturation: 1;
		brightness: 1;
		blur: fastanimgaussian(0, 0, 0);
		overflow: noclip;

		transition:
			saturation 0.2s ease-out 0s,
			brightness 0.2s ease-out 0s,
			blur 0.2s ease-out 0s;

		&__anim {
			saturation: 0.7;
			brightness: 0.8;
			blur: fastgaussian(3, 3, 3);
		}
	}

	&__pause-content-blur {
		width: 100%;
		height: 100%;
		background-color: rgba(0, 0, 0, 0.005);
	}

	&__square-logo {
		height: 95%;
		width: height-percentage(1);
		transform: translateX(-16%);
		opacity: 0;
		-s2-mix-blend-mode: additive;
		horizontal-align: left;
		vertical-align: center;
		transition:
			transform 0.25s ease-out 0s,
			opacity 0.25s ease-out 0s;

		&__anim {
			transform: translateX(-15%);
			opacity: 0.02;
		}
	}

	&__menu {
		width: 100%;
		height: 100%;
		max-width: 1920px;
		max-height: 1080px;
		align: center center;

		&__t-prop {
			transition:
				transform 0.1s ease-out 0s,
				opacity 0.1s ease-out 0s;
		}

		&__anim {
			transform: translateX(-50px);
			opacity: 0;
		}
	}

	&__menu-space {
		width: 672px;
		height: 100%;
	}

	&__page-bg {
		width: 100%;
		height: 100%;
		//background-color: gradient(linear, 0% 0%, 100% 0%, from($base-950), to(rgba(0, 0, 0, 0)));
	}

	&__gradient-bar {
		width: 672px;
		height: 100%;
		background-color: gradient(linear, 0% 0%, 100% 0%, from($base-950), to(rgba(0, 0, 0, 0)));
	}

	&__grid1 {
		vertical-align: top;
		horizontal-align: left;
		transform: scaleY(-1) translateX(-1px) translateY(-1px);
		opacity: 0.25;
	}

	&__grid2 {
		vertical-align: bottom;
		horizontal-align: left;
		transform: translateX(-1px) translateY(1px);
		opacity: 0.25;
	}

	&__logo-space {
		width: 540px;
		height: 240px;
		horizontal-align: center;
		background-color: rgba(255, 255, 255, 0);
	}

	&__logo {
		width: 540px;
		height: 130px;
		horizontal-align: center;
		vertical-align: bottom;
		//img-shadow: 0px 0px 50px 4 $base-950;
	}

	&__nav {
		width: 672px;
		vertical-align: center;
		flow-children: down;

		opacity: 1;
		transform: translateX(0px);
		blur: gaussian(0, 0, 0);

		transition:
			transform calc($pane-move-time * 1.5) ease-out 0s,
			opacity $pane-move-time ease-in-out 0s,
			blur calc($pane-move-time * 2) ease-in-out 0s;

		&__anim {
			opacity: 0;
			transform: translateX(-50px);
			blur: gaussian(10, 10, 2);
		}

		&__inner {
			width: 100%;
			flow-children: down;
			margin-top: 60px;
			margin-bottom: 200px;
		}

		&__controls {
			width: 100%;
			flow-children: down;
			vertical-align: center;

			&__wrapper {
				width: 100%;
				min-height: 504px;
				margin: 50px 0;
			}
		}

		&__btn {
			flow-children: right;
			width: 100%;
			min-height: 70px;
			padding-left: 75px;

			$this: &;

			& > SteamInputAction {
				horizontal-align: right;
				margin-right: 15px;
			}
			& > SteamInputAction.ControllerConnected {
				visibility: collapse;
			}

			&__text {
				@include mixin.font-styles($use-header: true);
				vertical-align: center;
				font-size: 20px;
				margin-right: 15px;
				text-shadow: 2px 2px 2px 2 $base-950;
			}

			&__small-text {
				vertical-align: center;
				font-size: 14px;
				color: $base-300;
				font-weight: light;
				text-shadow: 1px 1px 2px 2 $base-950;
			}

			.InputController &:focus:not(:disabled) {
				& > SteamInputAction {
					visibility: visible;
				}
			}

			.InputKeyboard &:hover:not(:disabled),
			.InputController &:focus:not(:disabled) {
				animation: OpacityFlicker 3s linear 0s infinite normal forwards;
				background-color: gradient(
					linear,
					0% 0%,
					100% 0%,
					from($button-background-hover-color),
					to(rgba(0, 0, 0, 0))
				);
				sound: 'UIPanorama.P2CE.MenuSelect';

				#{$this}__text,
				#{$this}__small-text {
					//text-shadow: none;
					color: $bright-color;
				}
			}

			&__no-gradient {
				.InputKeyboard &:hover:not(:disabled),
				.InputController &:focus:not(:disabled) {
					background-color: $button-background-hover-color;
				}
			}

			&:disabled {
				opacity: 0.5;

				#{$this}__text,
				#{$this}__small-text {
					color: $base-500;
				}
			}
		}
	}

	&__featured {
		$this: &;

		&__wrapper {
			width: 448px;
			border: $menu-pane-border;
			horizontal-align: center;
			vertical-align: bottom;
			flow-children: right;
			background-color: $base-950;
			margin-bottom: 30px;
			visibility: collapse;

			.InputController &:focus,
			.InputKeyboard &:hover {
				border-color: $primary-color;
				background-color: $button-background-hover;
				sound: 'UIPanorama.P2CE.MenuSelect';

				#{$this}__image {
					opacity: 0.9;
					border-color: $primary-color;
				}

				#{$this}__avatar {
					visibility: collapse;
				}
			}

			& SteamInputAction {
				vertical-align: top;
				horizontal-align: right;
				margin: 5px;
			}
			& SteamInputAction.ControllerConnected {
				visibility: collapse;
			}
			.InputController &:focus:not(:disabled) {
				& SteamInputAction {
					visibility: visible;
				}
			}
		}

		&__grid1 {
			width: 100%;
			height: 100%;
			background-image: url('file://{images}/menu/menu_grid5.png');
			background-repeat: no-repeat;
			background-position: left top -1px;
			background-img-opacity: 0.1;
			transform: scaleX(-1);
		}

		&__image {
			width: 128px;
			height: 128px;
			border-right: $menu-pane-border;
		}

		&__right {
			width: fill-parent-flow(1);
			height: 100%;
		}

		&__avatar {
			horizontal-align: right;
			height: 100%;
			width: height-percentage(100%);

			& > AvatarImage {
				width: 100%;
				height: 100%;
				opacity: 0.1;
			}

			& > Panel {
				width: 100%;
				height: 100%;
				background-color: gradient(linear, 0% 0%, 100% 0%, from($base-950), to(rgba($base-950, 0.5)));
			}
		}

		&__content {
			horizontal-align: center;
			vertical-align: center;
			flow-children: down;

			&__header {
				@include mixin.font-styles($use-header: true);
				font-size: 18px;
				horizontal-align: center;
			}

			&__subheader {
				font-size: 14px;
				letter-spacing: 1px;
				font-weight: light;
				color: $base-200;
				horizontal-align: center;
			}
		}
	}

	&__display-box {
		margin-left: 672px;
		width: 480px;
		flow-children: down;
		border: $menu-pane-border;
		border-color: $button-background-hover-color;
		vertical-align: center;
		&__img {
			width: 480px;
			height: 270px;
		}
		&__details {
			width: 100%;
			height: 62px;
			background-color: $base-gradient-subtle;
			background-image: url('file://{images}/menu/menu_grid4.png');
			background-repeat: no-repeat;
			background-position: right top;
			background-img-opacity: 0.1;
			border-top: $menu-pane-border;
			border-color: $button-background-hover-color;
			flow-children: down;
		}
		&__logo {
			width: 64px;
			height: 64px;
			margin: 15px;
		}
		&__head {
			@include mixin.font-styles($use-header: true);
			font-size: 20px;
		}
		&__tagline {
			color: $base-300;
			letter-spacing: 1px;
			font-size: 16px;
			vertical-align: center;
		}
	}

	&__normal-page-container {
		width: 100%;
		height: 100%;
		max-height: 2160px;
		flow-children: down;
		padding: 30px;
	}

	&__page-head {
		@include mixin.font-styles($use-header: true);
		font-size: 38px;
		text-shadow: 2px 2px 2px 2 $base-950;
	}

	&__page-tagline {
		font-size: 24px;
		color: $base-300;
		font-weight: light;
		letter-spacing: 1px;
		margin-bottom: 15px;
		text-shadow: 1px 1px 2px 2 $base-950;
	}

	&__page-insert {
		width: 100%;
		height: fill-parent-flow(1);
	}

	&__page {
		width: 100%;
		height: 100%;
		flow-children: down;

		opacity: 0;
		transform: translateX(125px);
		blur: gaussian(10, 10, 2);

		transition:
			transform calc($pane-move-time * 1.5) ease-out 0s,
			opacity $pane-move-time ease-in-out 0s,
			blur calc($pane-move-time * 2) ease-in-out 0s;

		&__anim {
			opacity: 1;
			transform: translateX(0px);
			blur: gaussian(0, 0, 0);
		}

		&__back-anim {
			opacity: 0;
			transform: translateX(-125px);
		}
	}

	&__page-actions {
		height: $button-height;
		width: 100%;
		margin-top: 15px;
		flow-children: right;
		&__button {
			@at-root .InputController .mainmenu__page-actions__button {
				visibility: collapse;
			}
			& Label {
				transform: translateY(-1px);
			}
		}
	}

	&__page-controls {
		opacity: 0;
		transform: translateX(50px);
		blur: gaussian(10, 10, 2);

		// TODO: Use keyframe anims
		//animation: MainMenuFlash 0.2s ease-in-out 0s 1 normal forwards;

		&__t-prop {
			transition:
				transform calc($pane-move-time * 2) ease-out 0s,
				opacity $pane-move-time ease-in-out 0s,
				blur calc($pane-move-time * 2.5) linear 0s;
		}

		&__anim {
			opacity: 1;
			transform: translateX(0px);
			blur: gaussian(0, 0, 0);
		}

		&__flash {
			blur: gaussian(10, 10, 2);
		}
	}

	&__featured-bg {
		background-color: $base-gradient;
		border: $menu-pane-border;
		padding: 10px 15px;
		horizontal-align: right;
		margin: 15px;
		flow-children: right;

		&__text {
			horizontal-align: right;
			font-size: 12px;
			letter-spacing: 1px;
			color: $base-300;
		}

		&__name {
			@include mixin.font-styles($use-header: true);
			horizontal-align: right;
			color: $base-300;
			font-size: 16px;
		}

		&__avatar {
			margin-left: 10px;
			width: 48px;
			height: 48px;
			background-color: $base-950;
			border: $menu-pane-border;
		}
	}

	&__version {
		horizontal-align: right;
		vertical-align: bottom;
		background-color: $base-gradient;
		border: $menu-pane-border;
	}

	// this should be similar to pause blur
	// and extend out of the container and be clipped back
	// but for some reason it's behaving differently and
	// i can't figure out why
	&__switcher-blur {
		width: 100%;
		height: 100%;
	}

	&__page-blur {
		width: 100%;
		height: 100%;
	}
}

